	  passed to Program::parse(), ::parsePending(), or ::parseCommit() as 
	  the last argument to each respective method
	* changed parseDatasource() to correctly parse a datasource string
	  without a username or password
	* made QoreClass::name private
	* divided PO_NO_THREADS into PO_NO_THREAD_CONTROL (-R) and 
	  PO_NO_THREAD_CLASSES (-X) and respective command-line options

2006.09.10: David Nichols
	* "tibrv" module: fixed exception handling in QoreTibrvCmTransport
	* "tibae" module: updated to new internal API
	* fixed a memory leak when deleting qore classes that have pending 
	  method additions (affected builds with and without STL hash_map
	  support)
	* fixed class execution when %exec-class is not used
	* implemented the "-A" command-line option to disallow changes to the
	  warning level
	* added domain tags to builtin classes to allow for enforcing parse 
	  restrictions on class access
	* implemented logic to verify function domains of classes when using the
	  "new" operator and when declaring base classes with "inherits" - if
	  a class provides functionality restricted by the current parse options
	  an exception is thrown
	* implemented -B command-line option to disallow database access
	* implemented warning: undeclared-var
	* implemented defaultWarningHandler() to print out warnings in a user-
	  friendly way
	* implemented warning: duplicate-global-var
	* made it illegal to declare constructor and destructor methods as 
	  private
	* implemented warning: synchronization-ignored
	* fixed error detection and reporting in scanner.ll when a required
	  argument was not given to a parse directive (like %exec-class)
	* implemented "flush()" function to flush standard output as printed by
	  print(), printf(), etc
	* combined some thread tests into test/thread-object-test.q

2006.09.09: David Nichols
	* fixed a race condition in thread.cc where the thread list was 
	  accessed outside the thread lock but could be dynamically reallocated